Prevent horizontal overflow

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -35,6 +35,7 @@ body {
 	margin: 1em 0 0 0;
 	padding: 0 1em 0 1em;
 	position: relative;
+  overflow-wrap: anywhere;
 }
 .edit {
 	position: absolute;
